# libre-code

./: BACKLOG.md  Cargo.toml  DOMAIN_VISION.md  README.md  TODO.md
docs/market/competitors/: README.md  aider.md  amp.md  augment-code.md  bolt.md  claude-code.md  cline.md  codegen.md  codex-cli.md  cursor.md  devin.md  gemini-cli.md  github-copilot.md  kiro.md  lovable.md  qodo.md  replit-agent.md  v0.md  windsurf.md
docs/research/: README.md
docs/research/ai-coding-agents/: brief.md  competitors.md  literature-review.md  sources-log.md
docs/research/ai-coding-agents/competitors/: cline.md  gemini-cli.md  goose.md  opencode.md  plandex.md
src/: app.rs  main.rs
